fixed overlapping calendar css

--- a/css/style.css
+++ b/css/style.css
@@ -107,7 +107,7 @@ body h1{
 
 /*--Calendar--*/
 #calendarr{
-  height:90vh;
+  height:auto;
   width: 100%;
   margin: 0 auto;
 }
